--- a/src/pages/dir/styles.css
+++ b/src/pages/dir/styles.css
@@ -1,7 +1,24 @@
 * {
     box-sizing: border-box;
   }
-  
+
+#root {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  user-select: none;
+  font-family: monospace;
+}
+
+#root {
+  overflow: auto;
+  background: #272727;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
   
   
   .main-box {
@@ -10,7 +27,7 @@
     height: 60px;
     cursor: pointer;
     /* border-radius: 5px; */
-    box-shadow: 0 0 0 2px white;
+    box-shadow: 0 0 0 2px hotpink;
     overflow: hidden;
   }
   
@@ -20,7 +37,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: hotpink;
+    background: blue;
   }
   
   .content-box {
@@ -32,7 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: black;
     font-weight: bold;
     font-size: 24px;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
